<resources>

    <string name="app_name">MySuperMarket</string>

    <!-- activity_login strings start -->
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_create_one">No Account? Create One.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <!-- activity_login strings end -->

    <!-- activity_login, activity_register shared strings start -->
    <string name="email_hint">email@example.com</string>
    <string name="password_hint">password</string>
    <!-- activity_login and activity_register shared strings end -->

    <!-- activity_register strings start -->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="register_account_btn">Register</string>
    <string name="cancel_btn">Cancel</string>
    <string name="registration_success">Registered Successfully!</string>
    <string name="not_all_fields_filled">All fields must be filled!</string>
    <string name="email_required">Email Required!</string>
    <string name="name_too_long">Name is too long!</string>
    <string name="numeric_or_special_chars_provided">Only Alphabet characters allowed!</string>
    <string name="auth_failed">Invalid username or password!</string>
    <string name="email_sent">Email sent to:</string>

    <string name="resend_verification_email_btn">Resend</string>

    <!-- activity_register strings end -->

    <!-- activity_password_reset strings start -->
    <string name="reset_password">Reset Password</string>
    <!-- activity_password_reset strings end -->

    <!-- activity_resend_verification_email strings start -->
    <string name="resend_verification_email_prompt">We sent you verification email recently to the following email: </string>
    <string name="resend_verification_now">Resend verification email now?</string>
    <string name="google_auth_failed">Google sign in failed!</string>
    <!-- activity_resend_verification_email strings end -->

    <!-- Facebook values start -->
    <string name="facebook_app_id">1491611330994517</string>
    <string name="fb_login_protocol_scheme">fb1491611330994517</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_internet_connection_prompt">Please check your Internet connection.</string>
    <string name="retry">RETRY</string>
    <string name="dismiss">DISMISS</string>
    <string name="flash_deals_banner">Flash Deals Banner</string>
    <string name="choose_picture_location">Choose</string>
    <string name="exit_prompt">Are you sure that you want to exit?</string>
    <string name="exit_warning">Exit</string>
    <string name="exit">Exit</string>
    <string name="meat">Meat</string>
    <string name="categories">Categories</string>
    <string name="fish">Fish</string>
    <string name="bakery">Bakery</string>
    <string name="todo">TODO</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="alcohol">Alcohol</string>
    <string name="beverages">Beverages</string>
    <string name="textview">TextView</string>
    <string name="update_products">Update Products</string>
    <string name="logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <!-- Facebook values end -->

</resources>
