<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mActivityNestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"

    android:scrollbars="none">

    <FrameLayout
        android:id="@+id/fragment_shop_now_main_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        tools:context=".fragments.ShopNowFragment">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:alpha="0.7"
            android:background="#FFFFFF"
            android:contentDescription="@string/flash_deals_banner" />

        <!--ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"


            android:layout_marginEnd="5dp"
            android:clipChildren="false"-->


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tBarShopNowFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF6D00"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/iBGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="#00FFFFFF"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/tVCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/textview"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/fLShopNowFlashDealsBannerFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:contextClickable="false"
                android:textAlignment="center">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/fragment_shop_now_flash_deals_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />

                <!--<androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rVFlashDeals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />-->
            </FrameLayout>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/fCShopNowCircleIndicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_above="@+id/fCShopNowSearch"
                android:layout_marginBottom="20dp" />
            <!--<me.relex.circleindicator.CircleIndicator2
                android:id="@+id/fCShopNowCircleIndicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_above="@+id/fCShopNowSearch"
                android:layout_marginBottom="20dp" />-->


            <SearchView
                android:id="@+id/fCShopNowSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/fLShopNowFlashDealsBannerFragment"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_corners_shape_background"
                android:backgroundTint="#F7F5F5"
                android:elevation="5dp"
                android:gravity="center_horizontal">

            </SearchView>

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fCShopNowSearch"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:clickable="false"
                android:ems="10"

                android:fadeScrollbars="false"
                android:gravity="bottom"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbars="none"
                android:text="@string/categories"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/fCShopNowInnerHorizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_below="@id/txtCategory"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"

                android:scrollbars="none">

                <RelativeLayout
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp">

                    <ImageButton
                        android:id="@+id/fCShopNowMeatImageButton"
                        style="@style/Widget.AppCompat.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@null"
                        android:contentDescription="@string/todo"
                        android:cropToPadding="false"
                        android:foregroundGravity="bottom"
                        android:hapticFeedbackEnabled="true"
                        android:src="@mipmap/ic_shop_now_fragment_category_meat_round"
                        android:text="@string/meat"
                        android:textAlignment="gravity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowMeatImageButton"
                        android:layout_alignBaseline="@id/fCShopNowMeatImageButton"

                        android:layout_alignStart="@id/fCShopNowMeatImageButton"
                        android:layout_alignEnd="@id/fCShopNowMeatImageButton"

                        android:layout_centerHorizontal="true"

                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/meat"
                        android:textAlignment="gravity" />

                    <ImageButton
                        android:id="@+id/fCShopNowFishImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/fCShopNowMeatImageButton"
                        android:background="@null"
                        android:src="@mipmap/ic_shop_now_fragment_category_fish_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowFishImageButton"
                        android:layout_alignBaseline="@id/fCShopNowFishImageButton"

                        android:layout_alignStart="@id/fCShopNowFishImageButton"
                        android:layout_alignEnd="@id/fCShopNowFishImageButton"

                        android:layout_centerHorizontal="true"

                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/fish"
                        android:textAlignment="gravity" />

                    <ImageButton
                        android:id="@+id/fCShopNowBakeryImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/fCShopNowFishImageButton"
                        android:background="@null"
                        android:src="@mipmap/ic_shop_now_fragment_category_bakery_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowBakeryImageButton"
                        android:layout_alignBaseline="@id/fCShopNowBakeryImageButton"

                        android:layout_alignStart="@id/fCShopNowBakeryImageButton"
                        android:layout_alignEnd="@id/fCShopNowBakeryImageButton"

                        android:layout_centerHorizontal="true"

                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/bakery"
                        android:textAlignment="gravity" />

                    <ImageButton
                        android:id="@+id/fCShopNowFruitsImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/fCShopNowBakeryImageButton"
                        android:background="@null"
                        android:contentDescription="@string/todo"
                        android:src="@mipmap/ic_shop_now_fragment_category_fruits_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowFruitsImageButton"
                        android:layout_alignBaseline="@id/fCShopNowFruitsImageButton"

                        android:layout_alignStart="@id/fCShopNowFruitsImageButton"
                        android:layout_alignEnd="@id/fCShopNowFruitsImageButton"

                        android:layout_centerHorizontal="true"

                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/fruits"
                        android:textAlignment="gravity" />

                    <ImageButton
                        android:id="@+id/fCShopNowVegetablesImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/fCShopNowFruitsImageButton"
                        android:background="@null"
                        android:src="@mipmap/ic_shop_now_fragment_category_vegetables_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowVegetablesImageButton"
                        android:layout_alignBaseline="@id/fCShopNowVegetablesImageButton"

                        android:layout_alignStart="@id/fCShopNowVegetablesImageButton"
                        android:layout_alignEnd="@id/fCShopNowVegetablesImageButton"

                        android:layout_centerHorizontal="true"

                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/vegetables"
                        android:textAlignment="gravity" />

                    <ImageButton
                        android:id="@+id/fCShopNowAlcoholImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/fCShopNowVegetablesImageButton"
                        android:background="@null"
                        android:src="@mipmap/ic_shop_now_fragment_category_alcohol_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowAlcoholImageButton"

                        android:layout_alignBaseline="@id/fCShopNowAlcoholImageButton"
                        android:layout_alignStart="@id/fCShopNowAlcoholImageButton"

                        android:layout_alignEnd="@id/fCShopNowAlcoholImageButton"

                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/alcohol"
                        android:textAlignment="gravity" />

                    <ImageButton
                        android:id="@+id/fCShopNowBeveragesImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/fCShopNowAlcoholImageButton"
                        android:background="@null"
                        android:src="@mipmap/ic_shop_now_fragment_category_beverages_round" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/fCShopNowBeveragesImageButton"
                        android:layout_alignBaseline="@id/fCShopNowBeveragesImageButton"

                        android:layout_alignStart="@id/fCShopNowBeveragesImageButton"
                        android:layout_alignEnd="@id/fCShopNowBeveragesImageButton"

                        android:layout_centerHorizontal="true"

                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/beverages"
                        android:textAlignment="gravity" />


                </RelativeLayout>


            </HorizontalScrollView>

            <!--LinearLayout
                    android:id="@+id/fLShopNowInnerLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/fCShopNowSearch"
                    android:orientation="horizontal"/-->

            <!--<androidx.viewpager.widget.ViewPager
                android:id="@+id/fCShopNowMiddleViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fCShopNowInnerHorizontalScrollView"
                android:visibility="visible" />-->

            <!--<androidx.viewpager.widget.ViewPager
                android:id="@+id/fCShopNowBottomViewPager"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_below="@id/fCShopNowInnerHorizontalScrollView"
                android:visibility="visible" />-->

            <FrameLayout
                android:layout_width="match_parent"
                android:id="@+id/fLShopNowMiddleFrameLayout"
                android:layout_height="500dp"
                android:layout_below="@id/fCShopNowInnerHorizontalScrollView"
                android:layout_alignParentBottom="true" />


        </RelativeLayout>


    </FrameLayout>
</ScrollView>