<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grain"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".activities.ResetPasswordActivity">

    <include layout="@layout/base_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:alpha="1"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <EditText
                android:uid="@+uid/activity_passreset_et_email"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="5dp"
                android:alpha="0.7"
                android:autofillHints=""
                android:background="@drawable/rounded_corners_shape_background"
                android:ems="10"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:onClick="emailInputValidation"
                android:outlineProvider="none"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#70BDBA"
                android:textColorHint="#363434"
                android:textColorLink="#050505"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top|center_vertical"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="5dp"
                        android:alpha="0.95"
                        android:background="@drawable/rounded_corners_button"
                        android:backgroundTint="#FFA000"
                        android:fontFamily="sans-serif-thin"
                        android:onClick="resetPassword"
                        android:text="@string/reset_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:layout_marginBottom="5dp"
                        android:alpha="0.95"
                        android:background="@drawable/rounded_corners_button"
                        android:backgroundTint="#EF5350"
                        android:fontFamily="sans-serif-thin"
                        android:onClick="cancel"
                        android:text="@string/cancel_btn"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="85pt"
                        android:layout_height="wrap_content" />

                    <ProgressBar
                        android:uid="@+uid/activity_passreset_pb_progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminateDrawable="@drawable/progress"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>